--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -25,6 +25,8 @@ jobs:
       - name: Login to Amazon ECR
         id: login-pf-aws-ecr
         uses: aws-actions/amazon-ecr-login@v1
+        with:
+          registry-type: public
         
       - name: Build and push Docker images
         id: build-and-push
