--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -25,8 +25,6 @@ jobs:
       - name: Login to Amazon ECR
         id: login-pf-aws-ecr
         uses: aws-actions/amazon-ecr-login@v1
-        with:
-          registry-type: public
         
       - name: Build and push Docker images
         id: build-and-push
@@ -34,7 +32,7 @@ jobs:
         with:
           context: ./backend
           push: true
-          tags: public.ecr.aws/t9j7d6x4/jituexchange-backend:${{ github.sha }}
+          tags: ${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.eu-north-1.amazonaws.com/jituexchange-api:${{ github.sha }}
 
       - name: Build and push Background Docker image
         id: build-and-push-background
@@ -42,7 +40,7 @@ jobs:
         with:
           context: ./background
           push: true
-          tags: public.ecr.aws/t9j7d6x4/jituexchange-background-services:${{ github.sha }}
+          tags: ${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.eu-north-1.amazonaws.com/jituexchange-background-services:${{ github.sha }}
 
       - name: Build and push Frontend Docker image
         id: build-and-push-frontend
@@ -50,7 +48,7 @@ jobs:
         with:
           context: ./frontend
           push: true
-          tags: public.ecr.aws/t9j7d6x4/jituexchange-angular:${{ github.sha }}
+          tags: ${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.eu-north-1.amazonaws.com/jituexchange-angular:${{ github.sha }}
 
       - name: Update AWS ECS service
         id: update-service
@@ -61,8 +59,8 @@ jobs:
               "family": "jituexchange-${{ github.ref }}",
               "containerDefinitions": [
                 {
-                  "name": "backend",
-                  "image": public.ecr.aws/t9j7d6x4/jituexchange-backend:${{ github.sha }}",
+                  "name": "api",
+                  "image": "${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.eu-north-1.amazonaws.com/jituexchange-api:${{ github.sha }}",
                   "cpu": 256,
                   "memoryReservation": 512,
                   "portMappings": [
@@ -74,14 +72,14 @@ jobs:
                 },
                 {
                   "name": "background",
-                  "image": public.ecr.aws/t9j7d6x4/jituexchange-background-services:${{ github.sha }}",
+                  "image": "${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.eu-north-1.amazonaws.com/jituexchange-background-services:${{ github.sha }}",
                   "cpu": 256,
                   "memoryReservation": 512,
                   "essential": false
                 },
                 {
-                  "name": "frontend",
-                  "image": public.ecr.aws/t9j7d6x4/jituexchange-angular:${{ github.sha }}",
+                  "name": "angular",
+                  "image": "${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.eu-north-1.amazonaws.com/jituexchange-angular:${{ github.sha }}",
                   "cpu": 256,
                   "memoryReservation": 512,
                   "portMappings": [
