nginx cors configuration and use node alpine

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18 as build
+FROM node:18-alpine as build
 
 WORKDIR /frontend
 
@@ -15,6 +15,8 @@ RUN npm run build
 FROM nginx:alpine
 
 COPY --from=build /frontend/dist/jitu-exchange /usr/share/nginx/html
+
+COPY /nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
