--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -50,47 +50,52 @@ jobs:
           push: true
           tags: ${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.eu-north-1.amazonaws.com/jituexchange-angular:${{ github.sha }}
 
+      - name: Generate task definition
+        id: generate-task-definition
+        run: |
+          echo '{
+            "family": "jituexchange-${{ github.head_ref || github.ref_name }}",
+            "containerDefinitions": [
+              {
+                "name": "api",
+                "image": "${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.eu-north-1.amazonaws.com/jituexchange-api:${{ github.sha }}",
+                "cpu": 256,
+                "memoryReservation": 512,
+                "portMappings": [
+                  {
+                    "containerPort": 3000,
+                    "protocol": "tcp"
+                  }
+                ]
+              },
+              {
+                "name": "background",
+                "image": "${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.eu-north-1.amazonaws.com/jituexchange-background-services:${{ github.sha }}",
+                "cpu": 256,
+                "memoryReservation": 512,
+                "essential": false
+              },
+              {
+                "name": "angular",
+                "image": "${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.eu-north-1.amazonaws.com/jituexchange-angular:${{ github.sha }}",
+                "cpu": 256,
+                "memoryReservation": 512,
+                "portMappings": [
+                  {
+                    "containerPort": 80,
+                    "protocol": "tcp"
+                  }
+                ]
+              }
+            ],
+            "executionRoleArn": "${{ secrets.ECS_TASK_EXECUTION_ARN }}"
+          }
+          ' >> task-definition-${{ github.sha }}.json
+
       - name: Update AWS ECS service
         id: update-service
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
-          task-definition: |
-            {
-              "family": "jituexchange-${{ github.head_ref || github.ref_name }}",
-              "containerDefinitions": [
-                {
-                  "name": "api",
-                  "image": "${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.eu-north-1.amazonaws.com/jituexchange-api:${{ github.sha }}",
-                  "cpu": 256,
-                  "memoryReservation": 512,
-                  "portMappings": [
-                    {
-                      "containerPort": 3000,
-                      "protocol": "tcp"
-                    }
-                  ]
-                },
-                {
-                  "name": "background",
-                  "image": "${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.eu-north-1.amazonaws.com/jituexchange-background-services:${{ github.sha }}",
-                  "cpu": 256,
-                  "memoryReservation": 512,
-                  "essential": false
-                },
-                {
-                  "name": "angular",
-                  "image": "${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.eu-north-1.amazonaws.com/jituexchange-angular:${{ github.sha }}",
-                  "cpu": 256,
-                  "memoryReservation": 512,
-                  "portMappings": [
-                    {
-                      "containerPort": 80,
-                      "protocol": "tcp"
-                    }
-                  ]
-                }
-              ],
-              "executionRoleArn": "${{ secrets.ECS_TASK_EXECUTION_ARN }}"
-            }
+          task-definition: task-definition-${{ github.sha }}.json
           service: jituexchange-service-${{ github.head_ref || github.ref_name }}
           cluster: jituexchange
