--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -20,6 +20,9 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           role-to-assume: ${{ secrets.ECS_ROLE_ARN }}
+          role-session-name: GitHubDeploy
+          role-skip-session-tagging: true
+          role-duration-seconds: 1200
         env:
           AWS_REGION: eu-north-1
 
