use aws region in secrets

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup AWS ECR Details
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-region: eu-north-1
+          aws-region: ${{secrets.AWS_REGION}}
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           role-to-assume: ${{ secrets.ECS_ROLE_ARN }}
@@ -24,19 +24,19 @@ jobs:
           role-skip-session-tagging: true
           role-duration-seconds: 1200
         env:
-          AWS_REGION: eu-north-1
+          AWS_REGION: ${{secrets.AWS_REGION}}
 
       - name: Login to Amazon ECR
         id: login-pf-aws-ecr
         uses: aws-actions/amazon-ecr-login@v1
         
-      - name: Build and push Docker images
+      - name: Build and push Backend Docker image
         id: build-and-push
         uses: docker/build-push-action@v2
         with:
           context: ./backend
           push: true
-          tags: ${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.eu-north-1.amazonaws.com/jituexchange-api:${{ github.sha }}
+          tags: ${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.${{secrets.AWS_REGION}}.amazonaws.com/jituexchange-api:${{ github.sha }}
 
       - name: Build and push Background Docker image
         id: build-and-push-background
@@ -44,7 +44,7 @@ jobs:
         with:
           context: ./background
           push: true
-          tags: ${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.eu-north-1.amazonaws.com/jituexchange-background-services:${{ github.sha }}
+          tags: ${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.${{secrets.AWS_REGION}}.amazonaws.com/jituexchange-background-services:${{ github.sha }}
 
       - name: Build and push Frontend Docker image
         id: build-and-push-frontend
@@ -52,7 +52,7 @@ jobs:
         with:
           context: ./frontend
           push: true
-          tags: ${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.eu-north-1.amazonaws.com/jituexchange-angular:${{ github.sha }}
+          tags: ${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.${{secrets.AWS_REGION}}.amazonaws.com/jituexchange-angular:${{ github.sha }}
 
       - name: Generate task definition
         id: generate-task-definition
@@ -62,7 +62,7 @@ jobs:
             "containerDefinitions": [
               {
                 "name": "api",
-                "image": "${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.eu-north-1.amazonaws.com/jituexchange-api:${{ github.sha }}",
+                "image": "${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.${{secrets.AWS_REGION}}.amazonaws.com/jituexchange-api:${{ github.sha }}",
                 "cpu": 256,
                 "memoryReservation": 512,
                 "portMappings": [
@@ -74,14 +74,14 @@ jobs:
               },
               {
                 "name": "background",
-                "image": "${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.eu-north-1.amazonaws.com/jituexchange-background-services:${{ github.sha }}",
+                "image": "${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.${{secrets.AWS_REGION}}.amazonaws.com/jituexchange-background-services:${{ github.sha }}",
                 "cpu": 256,
                 "memoryReservation": 512,
                 "essential": false
               },
               {
                 "name": "angular",
-                "image": "${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.eu-north-1.amazonaws.com/jituexchange-angular:${{ github.sha }}",
+                "image": "${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.${{secrets.AWS_REGION}}.amazonaws.com/jituexchange-angular:${{ github.sha }}",
                 "cpu": 256,
                 "memoryReservation": 512,
                 "portMappings": [
